refactor: 파라미터에 final 키워드 적용 및 unmodifaibleList 적용